--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     <div class="class_div">
         <h1>Hello world!</h1>
         <p>aaaaaaaaaa</p><br>
-        <button>www</button><br><br>
+        <a href="test2.html"><button>www</button></a><br><br>
         <select name="" id="">
             <option value="1">aaaa</option>
             <option value="2">bbbb</option>
